--- a/css/style.css
+++ b/css/style.css
@@ -1,144 +1,130 @@
 * {
+    outline: none;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
+
 
 body {
-    font-size: 16px;
-    font-family: Roboto;
-    background-color:#232323;
-    overflow: auto;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #fff;
+    background-color: #232768;
+    
+}
+
+/* .AboutMe-section {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+} */
+
+
+.start-text-info {
+    text-align: center;
+}
+
+.greeting {
+    font-size: 40px;
+}
+.info-name {
+    font-size: 45px;
+}
+
+.info-descitpion {
+    font-size: 35px;
+}
+
+.job {
+ font-size: 17px;
+}
+
+.special-info {
+    margin-top: 30px;
 }
 
 
-a,li {
-    text-decoration: none;
-    color: #000;
+.item-card {
+    width: 1000px;
+    height: 200px;
+    outline: #000;
 }
 
-.AboutMe {
+.social-link {
+    width: 150px;
     font-size: 20px;
-}
-
-.content {  
-    height: 15vh;
-}
-
-
-
-.title-bio {
-    font-size: 4vw !important;
-}
-
-.AboutMe {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    min-height: 70vh;
-}
-
-
-canvas {
-    background: #232323;
-    position: fixed;
-    z-index: -1;
-  }
-
-  .Biography h1 {
-    font-size: 6vh;
     color: #fff;
-    opacity: 0.9;
-  }
-
-  .Biography p {
-      font-size: 5vh;
-      color: #fff;
-  }
-
-
-  #navbarNav li a{
-      padding: 0.5em 3em !important;
-      align-items: center !important;   
-  }
-
-  .navbar-brand {
-      margin-top: 0.500rem;
-  }
-
-  .navbar-custom-white a {
-     color: #fff !important;
-     font-size: 1.2em !important;
-     height: 50px !important;
-  }
-
-  #navbarNav a:hover {
-    color: #000 !important;
-    background-color: #fff !important;
-    border-radius: 5px;
- }
-
-  .bg-black {
-    background-color: #000 !important;
-  }
-
-.projects {
-    width: 100%;
-    height: 150px;
-    background-color: #232323;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-
-.project-card {
-    width: 500px;
-    height: 100px;
-    background: #000;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 1s;
-    border: 1px solid #fff;
-}
-
-.project-card:hover {
-    transition: 1s;
-    margin-bottom: 20px;
-}
-
-
-.project-link {
+    display: block;
     text-decoration: none;
-    color: #fff;
-    font-weight: 600;
+    outline: #272eb3 2px solid;
+    background-color: #1089fa;
+}
+
+.section-title {
+    width: 100%;
     text-align: center;
-    margin: 20px;
 }
 
+section {
+    display: grid;
+    place-items: center;
+    align-content: center;
+    min-height: 80vh;
+}
 
-.wrapper {
-    min-height: 94%;
-    margin-top: auto;
+.project-cards {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    cursor: pointer;
-}
-
-.project-description {
-    color: #fff;
-}
-
-.tech-skills {
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: space-evenly;
     margin-top: 50px;
 }
 
-.skills li{
-    color: #fff;
+/* .project-section {
+    height: 500px;
+} */
+
+.item-card {
+    width: 350px;
+    min-height: 300px;
+    color: #000;
+    background-color: #dddddd;
+
+    border-radius: 3px;
+    transition: box-shadow 0.3s ease;
+    cursor: pointer;
+    box-shadow: 1px 3px 15px 0px rgb(0, 0, 0);
+}
+
+.item-title {
+    color: #000;
+    text-align: center;
+}
+
+.desc-list {
+    padding: 20px;
+}
+
+.list-item {
+    padding-top: 6px;
+}
+
+.tech-skills {
+    font-size: 30px;
+}
+
+.skills-section {
+    width: 80%;
+    margin: 0 auto;
+    height: 300px;
+}
+
+.hidden {
+    opacity: 0;
+    transition: all 1s;
+}
+
+@media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
 }
