--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ section {
     min-height: 300px;
     color: #000;
     background-color: #dddddd;
-
+    margin: 10px;
     border-radius: 3px;
     transition: box-shadow 0.3s ease;
     cursor: pointer;
