--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
     text-decoration: none;
     outline: #272eb3 2px solid;
     background-color: #1089fa;
+    margin: 0 auto;
 }
 
 .section-title {
@@ -77,7 +78,6 @@ section.sect {
     width: 100%;
     justify-content: center;
     margin-top: 50px;
-    10px;
 }
 
 /* .project-section {
